--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "eslint-config-prettier": "^8.3.0"
   },
   "dependencies": {
-    "gsap": "^3.9.1"
+    "gsap": "^3.9.1",
+    "lenis": "^1.0.45",
+    "split-type": "^0.3.4",
+    "typewriter-effect": "^2.21.0"
   }
 }
